@@ -1,2 +1,4 @@
 # mbks
 MBKS ETU 2025
+
+for java: --module-path "C:\Program Files\Java\javafx-sdk-23\lib" --add-modules=javafx.controls --enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics
